syntax = "proto3";

package ollo.ons.v1;

import "gogoproto/gogo.proto";
import "ollo/ons/v1/params.proto";

option go_package = "github.com/ollo-station/ollo/x/ons/types";

// GenesisState defines the ons module's genesis state.
message GenesisState {
  Params params  = 1 [(gogoproto.nullable) = false];
  string port_id = 2;
}

