syntax = "proto3";
package ollo.oracle;

option go_package = "ollo/x/oracle/types";

message PricesCallData {
  repeated string symbols = 1;
  uint64 multiplier = 2;
}

message PricesResult {
  repeated uint64 rates = 1;
}
